# ndk-samples

native-activity/: .bazelrc  .gitignore  BUILD  MODULE.bazel
native-activity/app/src/main/: BUILD
