module(
  name = "native-activity",
  version = "0.0.0",
)

bazel_dep(name = "platforms", version = "0.0.10")
bazel_dep(name = "rules_android", version = "0.1.1")

# TODO: Replace this with a released version once an updated
# version is available on BCR.
git_override(
    module_name = "rules_android",
    commit = "dd7b90c91fdc4edeca90ba9ebffa3c469b426a35",
    remote = "https://github.com/bazelbuild/rules_android",
)

register_toolchains(
    "@rules_android//toolchains/android:android_default_toolchain",
    "@rules_android//toolchains/android_sdk:android_sdk_tools",
)

android_sdk_repository_extension = use_extension("@rules_android//rules/android_sdk_repository:rule.bzl", "android_sdk_repository_extension")
use_repo(android_sdk_repository_extension, "androidsdk")

register_toolchains("@androidsdk//:sdk-toolchain", "@androidsdk//:all")

bazel_dep(name = "rules_android_ndk")
git_override(
    module_name = "rules_android_ndk",
    commit = "1c02c1cc7dc0c24727b964de0cefbe1a1bf24d55",
    remote = "https://github.com/ted-xie/rules_android_ndk",
)

android_ndk_repository_extension = use_extension("@rules_android_ndk//:extension.bzl", "android_ndk_repository_extension")
use_repo(android_ndk_repository_extension, "androidndk")

register_toolchains("@androidndk//:all")

bazel_dep(name = "rules_cc", version = "0.0.9")
